# dbg

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  test_suite.py
.github/workflows/: build-release.yaml  lint.yaml  release.yaml  test.yaml
_debug/: __init__.py  _attrs_backup.py  _numpy_backup.py  builtins.py  code.py  code_test.py  config.py  config_test.py  conftest.py  debug.py  debug_test.py  default.conf  file.py  format.py  format_test.py  position.py
debug/: __init__.py  _code.py  _code_test.py  _config.py  _config_test.py  _debug.py  _debug_test.py  _defaults.py  _file.py  _format.py  _format_test.py  _position.py  default.conf
test_data/: color_quotes.conf  disabled.conf  extra_section.conf  hyphenated_sort_collections.conf  invalid_color.conf  invalid_indent.conf  invalid_sort_collections.conf  monokai.conf  sort_unordered_collections.conf  spaced_sort_collections.conf  style_quotes.conf  syntax_error.conf  unused_field.conf  wide_indent.conf  wrong_section.conf
test_samples/: brackets.py  chdir.py  colored_repr.py  comment.py  conversion.py  generator.py  install_uninstall.py  large_number.py  lists.py  many_files.py  multiline_arguments.py  multiple_arguments.py  nested_expression.py  nested_function.py  no_arguments.py  no_offset.py  number.py  offset.py  partial_fns.py  pprint_sort.py  pytest_width.py  same_line.py  single_spill.py  singleton.py  spill_edge_cases.py  stateful_repr.py  string.py  string_literal.py  t_string.py  three_line.py  two_line.py  variable.py
test_samples/nested/: file.py
