[project]
name = "debug"
version = "2.3.1"
dynamic = ["dependencies"]
requires-python = ">=3.11,<3.15"

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"debug" = "debug", "_debug" = "_debug"}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["B", "E", "ERA", "F", "I", "N", "PT", "PYI", "RET", "RUF", "SIM", "UP", "W"]
extend-ignore = ["B028", "E501", "F811", "PT011", "PT012", "PYI041", "RET504", "SIM118"]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-pytest-style]
parametrize-names-type = "csv"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.data-files]
"_debug" = ["_debug/default.conf"]

[tool.setuptools.package-data]
"debug" = ["py.typed"]
"_debug" = ["py.typed"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:The 'u' type code is deprecated and will be removed in Python 3.16:DeprecationWarning"]

[tool.mypy]
warn_unreachable = true
disallow_subclassing_any = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["wcwidth.*"]
ignore_missing_imports = true
