[project]
name = "debug"
requires-python = ">=3.11,<3.15"
authors = [{name = "George Ogden"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["dependencies", "version"]


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["version.txt"]}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["debug", "_debug"]
exclude = ["test*"]

[tool.setuptools.data-files]
"_debug" = ["_debug/default.conf"]

[tool.setuptools.package-data]
"debug" = ["py.typed"]
"_debug" = ["py.typed"]
